<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_routine">

    <fragment
        android:id="@+id/navigation_routine"
        android:name="com.example.shareroutine.ui.routine.RoutineFragment"
        android:label="@string/title_routine"
        tools:layout="@layout/routine_fragment" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.shareroutine.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/community_fragment" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.shareroutine.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/user_fragment" />

</navigation>