<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context=".ui.routine.manage.fresh.NewRoutineFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_routine_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/new_routine_title_label"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_routine_title"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_routine_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/new_routine_title_label"
        app:layout_constraintBottom_toTopOf="@id/new_routine_term_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_routine_term_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/new_routine_term_label"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/new_routine_title"
        app:layout_constraintBottom_toTopOf="@id/new_routine_term"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/new_routine_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:selectionRequired="true"
        app:singleSelection="true"
        app:checkedChip="@id/new_routine_term_daily"
        app:layout_constraintTop_toBottomOf="@id/new_routine_term_label"
        app:layout_constraintBottom_toTopOf="@id/new_routine_todo_label">

        <com.google.android.material.chip.Chip
            android:id="@+id/new_routine_term_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_routine_term_daily_label" />

        <com.google.android.material.chip.Chip
            android:id="@+id/new_routine_term_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_routine_term_weekly_label" />

        <com.google.android.material.chip.Chip
            android:id="@+id/new_routine_term_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_routine_term_monthly_label" />

        <com.google.android.material.chip.Chip
            android:id="@+id/new_routine_term_yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_routine_term_yearly_label" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_routine_todo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/new_routine_todo_label"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/new_routine_term"
        app:layout_constraintBottom_toTopOf="@id/new_routine_todo"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/new_routine_todo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/new_routine_todo_label"
        app:layout_constraintBottom_toTopOf="@id/new_routine_confirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_routine_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_add"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/new_routine_todo"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>