<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/community_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/community_card_view_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/community_card_view_image"
            android:contentDescription="@string/community_card_view_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/community_card_view_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="2:1" />

        <TextView
            android:id="@+id/community_card_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/community_card_view_title"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/community_card_view_image"
            app:layout_constraintBottom_toBottomOf="@id/community_card_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/community_card_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="@string/community_card_view_username"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/community_card_view_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>