<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.community.CommunityAddActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/community_add_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/community_add_title_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/community_add_hashtag"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/community_add_title_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextStyle" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/community_add_hashtag"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/community_add_hashtag_label"
        app:layout_constraintTop_toBottomOf="@id/community_add_title"
        app:layout_constraintBottom_toTopOf="@id/community_add_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/community_add_hashtag_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextStyle" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/community_add_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:hint="@string/community_add_content_label"
        app:layout_constraintTop_toBottomOf="@id/community_add_hashtag"
        app:layout_constraintBottom_toTopOf="@id/community_add_routine_list_label"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/community_add_content_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextStyle" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/community_add_routine_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/community_add_routine_list_label"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/community_add_content"
        app:layout_constraintBottom_toTopOf="@id/community_add_routine_list"
        app:layout_constraintStart_toStartOf="@id/start_guideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/community_add_routine_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/community_add_routine_list_label"
        app:layout_constraintBottom_toTopOf="@id/community_add_button"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/community_add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_confirm"
        android:textSize="24sp"
        android:fontFamily="@font/maplestory_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>