<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserEditActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/prev_nickname_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@color/share_routine_theme_cream_pink"
        android:text="@string/user_prev_nickname_label"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/prev_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/prev_nickname_label"
        app:layout_constraintBottom_toTopOf="@id/new_nickname_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_nickname_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@color/share_routine_theme_cream_pink"
        android:text="@string/user_new_nickname_label"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/prev_nickname"
        app:layout_constraintBottom_toTopOf="@id/new_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/new_nickname_label"
        app:layout_constraintBottom_toTopOf="@id/edit_nickname_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_nickname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:background="@color/white"
            android:textAppearance="@style/TextStyle" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_nickname_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_confirm"
        android:textSize="24sp"
        android:fontFamily="@font/maplestory_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>